# Tokusatsu-Recommendation-ML-Model-Not-Done

./: .gitignore  Age_rating.py  File.py  app.py  clean.py  main.py  modal_test.py  model.py  pyproject.toml  toku_image_scraper.py  toku_scraper.py  tokusatsu_clean.csv  tokusatsu_shows.csv  tokusatsu_shows_enriched.csv  tokusatsu_shows_enriched_cleaned.csv  tokusatsu_shows_with_images.csv  utils.py
