[project]
name = "tokurecv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "load-dotenv>=0.1.0",
    "lxml>=6.0.1",
    "modal>=1.1.3",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
